compiler-core/src/go/tests/snapshots/gleam_core__go__tests__modules__unqualified_fn_call.snap
---
source: compiler-core/src/go/tests/modules.rs
expression: "import rocket_ship.{launch}\npub fn go() { launch() }\n"
snapshot_kind: text
---
----- SOURCE CODE
import rocket_ship.{launch}
pub fn go() { launch() }


----- COMPILED GO
package mod_P

import (
  gleam_P "example.com/todo/gleam"
  rocket_ship_P "example.com/todo/thepackage/rocket_ship"
)

const _ = gleam_P.Use_Import
const _ = rocket_ship_P.Use_Import
const Use_Import byte = 0

func Go() gleam_P.Int_t {
  return rocket_ship_P.Launch()
}
